# secousse

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package.json
.opencode/plans/: GPUI_REFACTOR_PLAN.md
secousse-gpui/: Cargo.toml  README.md
secousse-gpui/src/: actions.rs  app.rs  main.rs  theme.rs
secousse-gpui/src/api/: chat.rs  emotes.rs  mod.rs  twitch.rs
secousse-gpui/src/components/: mod.rs
secousse-gpui/src/state/: app_state.rs  auth_state.rs  mod.rs  settings.rs
secousse-gpui/src/views/: mod.rs  navbar.rs  sidebar.rs
src/: App.tsx  TauriHlsLoader.ts  actions.rs  app.rs  assets.rs  http.rs  main.rs  mock.rs  styles.css  theme.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  emotes.rs  lib.rs  main.rs  twitch.rs
src/api/: chat.rs  emotes.rs  mod.rs  oauth.rs  twitch.rs
src/components/: BrowseGrid.tsx  Chat.tsx  Navbar.tsx  Sidebar.tsx  StreamInfo.tsx  VideoPlayer.tsx  icon.rs  index.ts  mod.rs  text_input.rs
src/hooks/: index.ts  useAuth.ts  useChat.ts  useEmotes.ts  useSearch.ts  useTopStreams.ts
src/lib/: utils.ts
src/state/: app_state.rs  auth_state.rs  mod.rs  settings.rs
src/video/: element.rs  error.rs  gst_video.rs  mod.rs
src/views/: chat.rs  mod.rs  navbar.rs  sidebar.rs
