[package]
name = "secousse"
version = "0.1.0"
description = "An open-source streaming client for Twitch"
authors = ["noewen"]
edition = "2021"

[[bin]]
name = "Secousse"
path = "src/main.rs"

[lib]
name = "secousse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
anyhow = "1.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tauri-plugin-log = "2.8.0"
log = "0.4.29"

[features]
custom-protocol = ["tauri/custom-protocol"]
